Added basic HTML boilerplate and linked fontawesome icons. Also added some metadata for SEO

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en-US'>
+
 <head>
-    <meta charset="UTF-8">
+    <title>Recycling 101</title>
+    <meta name='description' content="Learn about ecology and the benefits that are brought on the environment as a result of recycling. Find nearby recycling centers now!">
+    <meta name='keywords' content='Recycle, e-waste, global warming, recycling center, green new deal, ecology'>
+    <meta name='author' content='recyclenear.me team'>
+    <meta name='robots' content='index, follow'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recycleeeeee</title>
+
+    <link rel='stylesheet' href='recycle.css'>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script defer src='recycle.js'></script>
 </head>
+
 <body>
-    
+    <h1> Learn all about recycling & find nearby recycling centers! </h1>
 </body>
+
 </html>
