Removed obsolete testing CSS, and added favicon

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel='stylesheet' href='recycle.css'>
+    <link rel="icon" href='assets/favicon.png'>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script defer src='recycle.js'></script>
 </head>
 
 <body>
     <h1> Learn all about recycling & find nearby recycling centers! </h1>
+    <img src='assets/favicon.png'>
 </body>
 
 </html>
