Defered some scripts

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <link rel='stylesheet' href='recycle.css'>
     <link rel="icon" href='assets/favicon.png'>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script defer src='recycle.js'></script>
 </head>
 
