Added a basic footer, and article section.
Co-authored-by: ElijahASC <elijahcherisma03@gmail.com>
Co-authored-by: RichardbrobbeyASC20 <richardbrobbey2003@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -57,17 +57,20 @@
     <div class='blog-container'>
         <div class='blog'>
             <div class='article'>
-                <h4>'</h4>
-                
                 <img src='assets/image.png' alt='testArticleImage'>
+                <div class='article-info'>
+                    <h4>Test Article Title</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem aperiam voluptas? Commodi, molestiae nemo.</p>
+                </div>
             </div>
         </div>
     </div>
 
 </body>
 <footer class="footer">
-    <p>Deyby Rodriguez | Richard Brobbey | Elijah Cherisma | Copyright 2020</p>
+    <p>Creators</p>
+    <p>Deyby Rodriguez | Richard Brobbey | Elijah Cherisma | Zahvier Walter</p>
+    <p> © 2020 SupaaHotTrash  | Copyright
 </footer>
 
 </html>
