Began implementing use of quotes API, added more styling and pages Modified favicon, and added more styling
Co-authored-by: ElijahASC <elijahcherisma03@gmail.com>
Co-authored-by: RichardbrobbeyASC20 <richardbrobbey2003@yahoo.com>

--- a/contact.html
+++ b/contact.html
@@ -52,23 +52,19 @@
         <a href="experience.html">Recycling Centers</a> 
     
         <a href="contact.html">Contact</a>
-    </div>
-
-    <div class='quoteArea'>
-        <h4><span class='quote'>Test Quote</span></h4>
-    </div>
+    </div> 
 
     <div class='blog-container'>
         <div class='blog'>
             <div class='article'>
                 <img src='assets/image.png' alt='testArticleImage'>
                 <div class='article-info'>
-                    <h4>Test Article Title</h4>
+                    <h4>Contact</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem aperiam voluptas? Commodi, molestiae nemo.</p>
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 
 </body>
 <footer class="footer">
