--- a/about.html
+++ b/about.html
@@ -52,23 +52,19 @@
         <a href="experience.html">Recycling Centers</a> 
     
         <a href="contact.html">Contact</a>
-    </div>
-
-    <div class='quoteArea'>
-        <h4><span class='quote'>Test Quote</span></h4>
-    </div>
+    </div> 
 
     <div class='blog-container'>
         <div class='blog'>
             <div class='article'>
                 <img src='assets/image.png' alt='testArticleImage'>
                 <div class='article-info'>
-                    <h4>Test Article Title</h4>
+                    <h4>Articles</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem aperiam voluptas? Commodi, molestiae nemo.</p>
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 
 </body>
 <footer class="footer">
@@ -78,5 +74,4 @@
     </p>
     <p> © 2020 SupaaHotTrash  | Copyright</p>
 </footer>
-
 </html>
