--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class='quoteArea'>
-        <h4><span class='quote'>Test Quote</span></h4>
+        <h4><span class='quote'></span></h4>
     </div>
 
     <div class='blog-container'>
