Began developing about us page Will use same stylesheet across all pages
Co-authored-by: RichardbrobbeyASC20 <richardbrobbey2003@yahoo.com>
Co-authored-by: ElijahASC <elijahcherisma03@gmail.com>

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <h4><span class='quote'></span></h4>
     </div>
 
+    <div class="description">
+    <p>An easy everyday way to protect the environment is recycling. Recycling allows us to reuse materials many times to conserve natural resources. While still being able to enjoy the products we use in our everyday lives. Burning garbage or throwing waste into landfills produces byproducts that pollute the environment. Runoff from landfills and metals like mercury find their way into streams, rivers and oceans, fish, and eventually into human beings, harming our health.</p>
+</div>
     <div class='blog-container'>
         <div class='blog'>
             <div class='article'>
