Changed color scheme, removed some styles and added more to about us page
Co-authored-by: RichardbrobbeyASC20 <richardbrobbey2003@yahoo.com>
Co-authored-by: ElijahASC <elijahcherisma03@gmail.com>
Co-authored-by: superkillermod44 <wzahvier@gmail.com>

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -21,58 +21,122 @@
 
         <a href="recyclingCenters.html">Recycling Centers</a>
 
-        <a href="aboutUs.html">Contact</a>
+        <a href="aboutUs.html">About Us</a>
     </div>
 
     <div class='aboutUs-container'>
-        <div class='aboutUs'>
-            <div class='team-member'>
-                <img src='assets/team images/richard.jpg' alt='testArticleImage'>
-                <div>
-                    <h4>Richard Brobbey</h4>
-                    <p>CEO of SupaaHotTrash. The mastermind behind the works of Everything and Anything. </p>
-                    <p></p>
-                </div>
-            </div>
-
-            <div class='team-member'>
-                <img src='assets/image.png' alt='testArticleImage'>
-                <div>
-                    <h4>Elijah Cherisma</h4>
-                    <p> CFO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur
-                        maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
-                        aperiam voluptas? Commodi, molestiae nemo.</p>
-                </div>
-            </div>
-
-            <div class='team-member'>
-                <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
-                <div>
-                    <h4>Deyby Rodriguez</h4>
-                    <p> CTO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur
-                        maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
-                        aperiam voluptas? Commodi, molestiae nemo.
-                    </p>
-                    
-                    <div class='social-media-container'>
-                        <div class='social-medias'>
-                            <ul>
-                                <li title='Google Calendar'><a target="_blank" rel="noopener noreferrer" href='https://calendar.google.com/calendar/selfsched?sstoken=UUpiNWNXcy1wQWtffGRlZmF1bHR8NGE0NzMwZDA2YTkyNDVjMjlkMWFhMDYyNjY1Njk3Y2E'><i class="far fa-calendar-plus"></i></a></li>
-                                <li title='LinkedIn'><a target="_blank" rel="noopener noreferrer" href='https://www.linkedin.com/in/deyby-rodriguez'><i class="fab fa-linkedin-in"></i></a></li>
-                                <li title='GitHub'><a target="_blank" rel="noopener noreferrer" href='https://github.com/deybyr647'><i class="fab fa-github"></i></a></li>
-                            </ul>
-                        </div>
+        <div class='team-member'>
+            <img src='assets/team images/richard.jpg' alt='testArticleImage'>
+            <div>
+                <h4>Richard Brobbey</h4>
+                <p>CEO of SupaaHotTrash. The mastermind behind the works of Everything and Anything. </p>
+                
+                <div class='social-media-container'>
+                    <div class='social-medias'>
+                        <ul>
+                            <li title='GitHub'><a target="_blank" rel="noopener noreferrer"
+                                    href='https://github.com/deybyr647'><i class="fab fa-github"></i></a></li>
+                            <li title='LinkedIn'><a target="_blank" rel="noopener noreferrer"
+                                    href='https://www.linkedin.com/in/deyby-rodriguez'><i
+                                        class="fab fa-linkedin-in"></i></a></li>
+                            <li title='Resume'><a target='_blank' rel='noopener noreferrer'
+                                    href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
+                                        id='resume-icon' class="far fa-file-alt"></i></a></li>
+                            <li title='Email'><a target="_blank" rel="noopener noreferrer"
+                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Deyby!'><i
+                                        class="far fa-envelope"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class='team-member'>
-                <img src='assets/image.png' alt='testArticleImage'>
-                <div>
-                    <h4>Zahvier Walter</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur
-                        maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
-                        aperiam voluptas? Commodi, molestiae nemo.</p>
+        <div class='team-member'>
+            <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
+            <div>
+                <h4>Elijah Cherisma</h4>
+                <p> CFO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                    similique consequatur
+                    maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
+                    aperiam voluptas? Commodi, molestiae nemo.
+                </p>
+
+                <div class='social-media-container'>
+                    <div class='social-medias'>
+                        <ul>
+                            <li title='GitHub'><a target="_blank" rel="noopener noreferrer"
+                                    href='https://github.com/deybyr647'><i class="fab fa-github"></i></a></li>
+                            <li title='LinkedIn'><a target="_blank" rel="noopener noreferrer"
+                                    href='https://www.linkedin.com/in/deyby-rodriguez'><i
+                                        class="fab fa-linkedin-in"></i></a></li>
+                            <li title='Resume'><a target='_blank' rel='noopener noreferrer'
+                                    href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
+                                        id='resume-icon' class="far fa-file-alt"></i></a></li>
+                            <li title='Email'><a target="_blank" rel="noopener noreferrer"
+                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Deyby!'><i
+                                        class="far fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class='team-member'>
+            <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
+            <div>
+                <h4>Deyby Rodriguez</h4>
+                <p> CTO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                    similique consequatur
+                    maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
+                    aperiam voluptas? Commodi, molestiae nemo.
+                </p>
+
+                <div class='social-media-container'>
+                    <div class='social-medias'>
+                        <ul>
+                            <li title='GitHub'><a target="_blank" rel="noopener noreferrer"
+                                    href='https://github.com/deybyr647'><i class="fab fa-github"></i></a></li>
+                            <li title='LinkedIn'><a target="_blank" rel="noopener noreferrer"
+                                    href='https://www.linkedin.com/in/deyby-rodriguez'><i
+                                        class="fab fa-linkedin-in"></i></a></li>
+                            <li title='Resume'><a target='_blank' rel='noopener noreferrer'
+                                    href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
+                                        id='resume-icon' class="far fa-file-alt"></i></a></li>
+                            <li title='Email'><a target="_blank" rel="noopener noreferrer"
+                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Deyby!'><i
+                                        class="far fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class='team-member'>
+            <img src='assets/image.png' alt='testArticleImage'>
+            <div>
+                <h4>Zahvier Walter</h4>
+                <p>Janitor of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                    similique consequatur
+                    maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
+                    aperiam voluptas? Commodi, molestiae nemo.
+                </p>
+
+                <div class='social-media-container'>
+                    <div class='social-medias'>
+                        <ul>
+                            <li title='GitHub'><a target="_blank" rel="noopener noreferrer"
+                                    href='https://github.com/deybyr647'><i class="fab fa-github"></i></a></li>
+                            <li title='LinkedIn'><a target="_blank" rel="noopener noreferrer"
+                                    href='https://www.linkedin.com/in/deyby-rodriguez'><i
+                                        class="fab fa-linkedin-in"></i></a></li>
+                            <li title='Resume'><a target='_blank' rel='noopener noreferrer'
+                                    href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
+                                        id='resume-icon' class="far fa-file-alt"></i></a></li>
+                            <li title='Email'><a target="_blank" rel="noopener noreferrer"
+                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Deyby!'><i
+                                        class="far fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
