--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script defer src='recycle.js'></script>
 </head>
 
-<body>
+<body class='mainBody'>
     <div class="topnav">
 
         <a class="active" href="#home"><strong>Recycle!</strong></a>
@@ -52,7 +52,7 @@
 
         <a href="recyclingCenters.html">Recycling Centers</a>
 
-        <a href="aboutUs.html">Contact</a>
+        <a href="aboutUs.html">About Us</a>
     </div>
 
     <div class='quoteArea'>
@@ -60,10 +60,10 @@
     </div>
 
     <div class="description">
-    <p>An easy everyday way to protect the environment is recycling. Recycling allows us to reuse materials many times to conserve natural resources. While still being able to enjoy the products we use in our everyday lives. Burning garbage or throwing waste into landfills produces byproducts that pollute the environment. Runoff from landfills and metals like mercury find their way into streams, rivers and oceans, fish, and eventually into human beings, harming our health.</p>
+    <p>Recycling is a Great Way to Preseve the Environment, it Allows Us to Reuse Materials to Conserve Natural Resources, Which is Why We Work to Make it Easiser for the Everyday Person to Recycle</p>
 </div>
     <div class='blog-container'>
-        <div class='blog'>
+        
             <div class='article'>
                 <img src='assets/image.png' alt='testArticleImage'>
                 <div class='article-info'>
@@ -73,7 +73,7 @@
                         aperiam voluptas? Commodi, molestiae nemo.</p>
                 </div>
             </div>
-        </div>
+        
     </div>
 
     <footer class="footer">
