--- a/aboutUs.html
+++ b/aboutUs.html
@@ -31,7 +31,7 @@
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
                 <h4>Richard Brobbey</h4>
-                <p>CEO of SupaaHotTrash. The mastermind behind the works of Everything and Anything. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem aperiam voluptas? Commodi, molestiae nemo.</p>
+                <p class=aup>CEO of SupaaHotTrash. The mastermind behind the works of Everything and Anything. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem aperiam voluptas? Commodi, molestiae nemo.</p>
                 
                 <div class='social-media-container'>
                     <div class='social-medias'>
@@ -57,7 +57,7 @@
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
                 <h4>Elijah Cherisma</h4>
-                <p> CFO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class=aup> CFO, CMO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
@@ -87,7 +87,7 @@
             <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
             <div>
                 <h4>Deyby Rodriguez</h4>
-                <p> CTO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class=aup> CTO, COO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
@@ -117,7 +117,7 @@
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
                 <h4>Zahvier Walter</h4>
-                <p>Janitor of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class=aup>President of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
