--- a/aboutUs.html
+++ b/aboutUs.html
@@ -31,7 +31,7 @@
         <div class='team-member'>
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
-                <h4>Richard Brobbey</h4>
+                <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a></h4>
                 <p>CEO of SupaaHotTrash. The mastermind behind the works of Everything and Anything. Lorem ipsum dolor
                     sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur maxime delectus sunt
                     modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem aperiam voluptas?
@@ -49,7 +49,7 @@
                                     href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
                                         id='resume-icon' class="far fa-file-alt"></i></a></li>
                             <li title='Email'><a target="_blank" rel="noopener noreferrer"
-                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Deyby!'><i
+                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Richard!'><i
                                         class="far fa-envelope"></i></a></li>
                         </ul>
                     </div>
@@ -60,7 +60,7 @@
         <div class='team-member'>
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
-                <h4>Elijah Cherisma</h4>
+                <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a></h4>
                 <p> CFO, CMO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
@@ -71,7 +71,7 @@
                     <div class='social-medias'>
                         <ul>
                             <li title='GitHub'><a target="_blank" rel="noopener noreferrer"
-                                    href='https://github.com/deybyr647'><i class="fab fa-github"></i></a></li>
+                                    href='https://github.com/ElijahASC'><i class="fab fa-github"></i></a></li>
                             <li title='LinkedIn'><a target="_blank" rel="noopener noreferrer"
                                     href='https://www.linkedin.com/in/deyby-rodriguez'><i
                                         class="fab fa-linkedin-in"></i></a></li>
@@ -79,7 +79,7 @@
                                     href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
                                         id='resume-icon' class="far fa-file-alt"></i></a></li>
                             <li title='Email'><a target="_blank" rel="noopener noreferrer"
-                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Deyby!'><i
+                                    href='mailto:elijahcherisma03@gmail.com?Subject=Hey%20Elijah!'><i
                                         class="far fa-envelope"></i></a></li>
                         </ul>
                     </div>
@@ -90,7 +90,7 @@
         <div class='team-member'>
             <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
             <div>
-                <h4>Deyby Rodriguez</h4>
+                <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a></h4>
                 <p> CTO, COO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
@@ -120,7 +120,7 @@
         <div class='team-member'>
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
-                <h4>Zahvier Walter</h4>
+                <h4 class=nl>Zahvier Walter</h4>
                 <p>President of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
@@ -139,7 +139,7 @@
                                     href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
                                         id='resume-icon' class="far fa-file-alt"></i></a></li>
                             <li title='Email'><a target="_blank" rel="noopener noreferrer"
-                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Deyby!'><i
+                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Zahvier!'><i
                                         class="far fa-envelope"></i></a></li>
                         </ul>
                     </div>
