--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p>Creators</p>
         <p>
             <a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> |
-            <a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a> |
+            <a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer"></a>Richard Brobbey</a> |
             <a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> |
             <a href="url" target="_blank" rel="noopener noreferrer">Zahvier Walter</a>
         </p>
