--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,7 +32,7 @@
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a></h4>
-                <p>CEO of SupaaHotTrash. The mastermind behind the works of Everything and Anything. Lorem ipsum dolor
+                <p class="bio">CEO of SupaaHotTrash. The mastermind behind the works of Everything and Anything. Lorem ipsum dolor
                     sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur maxime delectus sunt
                     modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem aperiam voluptas?
                     Commodi, molestiae nemo.</p>
@@ -41,15 +41,15 @@
                     <div class='social-medias'>
                         <ul>
                             <li title='GitHub'><a target="_blank" rel="noopener noreferrer"
-                                    href='https://github.com/deybyr647'><i class="fab fa-github"></i></a></li>
+                                    href='https://richardbrobbeyasc20.github.io/'><i class="fab fa-github"></i></a></li>
                             <li title='LinkedIn'><a target="_blank" rel="noopener noreferrer"
-                                    href='https://www.linkedin.com/in/deyby-rodriguez'><i
+                                    href='https://www.linkedin.com/in/richard-brobbey-8083b518a/'><i
                                         class="fab fa-linkedin-in"></i></a></li>
                             <li title='Resume'><a target='_blank' rel='noopener noreferrer'
-                                    href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
+                                    href=' https://docs.google.com/document/d/1-WYlnKvFN-x79kK0Hvaz7eNZT0GQrjBu16kIDgzYYP0/edit?usp=sharing'><i
                                         id='resume-icon' class="far fa-file-alt"></i></a></li>
                             <li title='Email'><a target="_blank" rel="noopener noreferrer"
-                                    href='mailto:deybyr647@gmail.com?Subject=Hey%20Richard!'><i
+                                    href='mailto:richardbrobbey2003@yahoo.com?Subject=Hey%20Richard!'><i
                                         class="far fa-envelope"></i></a></li>
                         </ul>
                     </div>
@@ -61,7 +61,7 @@
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a></h4>
-                <p> CFO, CMO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class="bio"> CFO, CMO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
@@ -91,7 +91,7 @@
             <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a></h4>
-                <p> CTO, COO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class="bio"> CTO, COO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
@@ -121,7 +121,7 @@
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
                 <h4 class=nl>Zahvier Walter</h4>
-                <p>President of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class="bio">President of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
