--- a/recyclingCenters.html
+++ b/recyclingCenters.html
@@ -10,6 +10,10 @@
     <link rel="icon" href='assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
+
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" type="text/css" />
+
     <script defer src='recyclingCenters.js'></script>
 
     <title>Recycling Centers</title>
