--- a/recyclingCenters.html
+++ b/recyclingCenters.html
@@ -10,6 +10,7 @@
     <link rel="icon" href='assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlTjLdKgz2WmDEFZBqabdsQq5xPevC8dc&callback=initMap&libraries=&v=weekly" defer></script>
 
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" type="text/css" />
@@ -34,7 +35,7 @@
     </div>
 
     <div class='mapContainer'>
-        <div id='map' style='width: 400px; height: 300px;'></div>
+        <div id='map' style='width: 800px; height: 600px;'></div>
         <button id='queryLocation'><i class="fas fa-location-arrow"></i></button>
     </div>
 
