Made all webpages responsive, styled up the map page & tweaked the JS a bit, so map loads by default instead of when a button is pressed

--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
 
     <div class="description">
     <p>Recycling is a Great Way to Preseve the Environment, it Allows Us to Reuse Materials to Conserve Natural Resources, Which is Why We Work to Make it Easiser for the Everyday Person to Recycle</p>
-</div>
+    </div>
+    
     <div class='articles-container'>
-        <h3>Featured Articles</h3>
+        <h3>Featured News</h3>
     </div>
 
     <div class="footer">
