--- a/recyclingCenters.html
+++ b/recyclingCenters.html
@@ -35,8 +35,8 @@
     </div>
 
     <div class='mapContainer'>
-        <div id='map' style='width: 800px; height: 600px;'></div>
-        <button id='queryLocation'><i class="fas fa-location-arrow"></i></button>
+        <div id='map'></div>
+        <button id='queryLocation'><i class="fas fa-location-arrow"></i> <span>Refresh Map</span></button>
     </div>
 
     <div class="footer">
