--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,10 +32,7 @@
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a></h4>
-                <p class="bio">CEO of SupaaHotTrash. The mastermind behind the works of Everything and Anything. Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Explicabo porro, similique consequatur maxime delectus sunt
-                    modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem aperiam voluptas?
-                    Commodi, molestiae nemo.</p>
+                <p class="bio">CEO of RecycleNear. The mastermind behind the works of Everything and Anything. I decided to be apart of this recycle project because I believe recycling is the simplest way to preserve </p>
 
                 <div class='social-media-container'>
                     <div class='social-medias'>
@@ -61,7 +58,7 @@
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a></h4>
-                <p class="bio"> CFO, CMO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class="bio"> CFO, CMO of RecycleNear Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
@@ -91,7 +88,7 @@
             <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a></h4>
-                <p class="bio"> CTO, COO of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class="bio"> CTO, COO of RecycleNear Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
@@ -121,7 +118,7 @@
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
                 <h4 class=nl>Zahvier Walter</h4>
-                <p class="bio">President of SupaaHotTrash Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <p class="bio">President of RecycleNear Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
