--- a/aboutUs.html
+++ b/aboutUs.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Lemonada&family=Oswald:wght@300&family=Red+Rose&family=Roboto:ital,wght@1,300&family=Rowdies:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='recycle.css'>
@@ -17,7 +18,7 @@
             <div class="topnav">
 
                 <a class="active" href="index.html"><strong><i class="fas fa-recycle"></i></strong></a>
-        
+                <a href="howTo.html">How To</a>
                 <a href="news.html">News</a>
         
                 <a href="recyclingCenters.html">Recycling Centers</a>
@@ -31,8 +32,10 @@
         <div class='team-member'>
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a></h4>
-                <p class="bio">CEO of RecycleNear. The mastermind behind the works of Everything and Anything. I decided to be apart of this recycle project because I believe recycling is the simplest way to preserve </p>
+                <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a>, <span>Designer, Front-End Developer, Communications Director</span></h4>
+                <p class="bio">CEO of RecycleNear. The mastermind behind the works of Everything. I decided to be apart of this team because recycling is important to me.
+                    I believe its the simplest way to preserve our earths resources and help the earth remain a beautiful place. I am currently in the Carl Sagon Engineering and Robotics Department at Forest Hills High School.
+                </p>
 
                 <div class='social-media-container'>
                     <div class='social-medias'>
@@ -57,8 +60,8 @@
         <div class='team-member'>
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a></h4>
-                <p class="bio"> CFO, CMO of RecycleNear Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
+                <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a>, <span>Lead Designer, Front-End Developer</span></h4>
+                <p class="bio"> CFO, CMO of RecycleNear Deybys ass will be mineLorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
                     aperiam voluptas? Commodi, molestiae nemo.
@@ -70,7 +73,7 @@
                             <li title='GitHub'><a target="_blank" rel="noopener noreferrer"
                                     href='https://github.com/ElijahASC'><i class="fab fa-github"></i></a></li>
                             <li title='LinkedIn'><a target="_blank" rel="noopener noreferrer"
-                                    href='https://www.linkedin.com/in/deyby-rodriguez'><i
+                                    href='https://www.linkedin.com/in/elijah-cherisma-a6ab0b1b4'><i
                                         class="fab fa-linkedin-in"></i></a></li>
                             <li title='Resume'><a target='_blank' rel='noopener noreferrer'
                                     href='https://drive.google.com/file/d/1XEt5j-4SGCIPB9mucvFHmFoBS73awsIc/view?usp=sharing'><i
@@ -87,11 +90,8 @@
         <div class='team-member'>
             <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a></h4>
-                <p class="bio"> CTO, COO of RecycleNear Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
-                    similique consequatur
-                    maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
-                    aperiam voluptas? Commodi, molestiae nemo.
+                <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a>, <span>Project Lead, Backend Devloper, QA Tester</span></h4>
+                <p class="bio"> My name is Deyby Antony Rodriguez and currently, I am a high school senior living in New York. Technology, well to be more specific, Computer Science, has been an interest for quite some time now. I aspire to one day become a web developer, in Front-End, Back-End, or Full-Stack development. Aside from technology, I love the winter, New York City, and I am also interested in business and finance.
                 </p>
 
                 <div class='social-media-container'>
@@ -150,7 +150,7 @@
             <a href="https://deybyr647.com/" target="_blank">Deyby Rodriguez</a> |
             <a href="https://richardbrobbeyasc20.github.io/" target="_blank">Richard Brobbey</a> |
             <a href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> |
-            <a href="url" target="_blank">Zahvier Walter</a>
+            <a id='inactive'>Zahvier Walter</a> 
         </p>
         <p> © 2020 recyclenear.me | Copyright</p>
     </div>
