--- a/recyclingCenters.html
+++ b/recyclingCenters.html
@@ -4,17 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Lemonada&family=Oswald:wght@300&family=Red+Rose&family=Roboto:ital,wght@1,300&family=Rowdies:wght@300&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='recycle.css'>
     <link rel='stylesheet' href='recyclingCenters.css'>
     <link rel="icon" href='assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlTjLdKgz2WmDEFZBqabdsQq5xPevC8dc&callback=initMap&libraries=&v=weekly" defer></script>
-
-    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" type="text/css" />
-
     <script defer src='recyclingCenters.js'></script>
 
     <title>Recycling Centers</title>
@@ -25,7 +20,7 @@
         <div class="topnav">
 
             <a class="active" href="index.html"><strong><i class="fas fa-recycle"></i></strong></a>
-
+            <a href="howTo.html">How To</a>
             <a href="news.html">News</a>
 
             <a href="recyclingCenters.html">Recycling Centers</a>
@@ -42,11 +37,11 @@
     <div class="footer">
         <p>Creators</p>
         <p>
-            <a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> |
-            <a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer"></a>Richard
+            <a class=pw href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> |
+            <a class=pw href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard
             Brobbey</a> |
-            <a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> |
-            <a href="url" target="_blank" rel="noopener noreferrer">Zahvier Walter</a>
+            <a class=pw href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> |
+            <a id='inactive'>Zahvier Walter</a>
         </p>
         <p> © 2020 recyclenear.me | Copyright</p>
     </div>
