--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,7 +32,7 @@
         <div class='team-member'>
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a>, <span>Designer, Front-End Developer, Communications Director</span></h4>
+                <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a> <br><span>Designer, Front-End Developer, Communications Director</span></h4>
                 <p class="bio">CEO of RecycleNear. The mastermind behind the works of Everything. I decided to be apart of this team because recycling is important to me.
                     I believe its the simplest way to preserve our earths resources and help the earth remain a beautiful place. I am currently in the Carl Sagon Engineering and Robotics Department at Forest Hills High School.
                 </p>
@@ -60,7 +60,7 @@
         <div class='team-member'>
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a>, <span>Lead Designer, Front-End Developer</span></h4>
+                <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> <br><span>Lead Designer, Front-End Developer</span></h4>
                 <p class="bio"> CFO, CMO of RecycleNear Deybys ass will be mineLorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
                     similique consequatur
                     maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
@@ -90,7 +90,7 @@
         <div class='team-member'>
             <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a>, <span>Project Lead, Backend Devloper, QA Tester</span></h4>
+                <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> <br><span>Project Lead, Backend Devloper, QA Tester</span></h4>
                 <p class="bio"> My name is Deyby Antony Rodriguez and currently, I am a high school senior living in New York. Technology, well to be more specific, Computer Science, has been an interest for quite some time now. I aspire to one day become a web developer, in Front-End, Back-End, or Full-Stack development. Aside from technology, I love the winter, New York City, and I am also interested in business and finance.
                 </p>
 
@@ -114,7 +114,7 @@
             </div>
         </div>
 
-        <div class='team-member'>
+        <div id='zahvier' class='team-member'>
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
                 <h4 class=nl>Zahvier Walter</h4>
