Added some transitions, and minor edits across some files

--- a/news.html
+++ b/news.html
@@ -34,8 +34,8 @@
         <p>
             <a class=pw href="https://deybyr647.com/" target="_blank">Deyby Rodriguez</a> |
             <a class=pw href="https://richardbrobbeyasc20.github.io/" target="_blank">Richard Brobbey</a> |
-            <a class=pw href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> |
-            <a id='inactive'>Zahvier Walter</a>
+            <a class=pw href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> 
+            <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
         <p> © 2020 recyclenear.me | Copyright</p>
     </div>
