--- a/aboutUs.html
+++ b/aboutUs.html
@@ -114,7 +114,7 @@
             </div>
         </div>
 
-        <div id='zahvier' class='team-member'>
+        <div id='zahvier' class='team-member zahvier'>
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
                 <h4 class=nl>Zahvier Walter</h4>
@@ -149,8 +149,8 @@
         <p>
             <a href="https://deybyr647.com/" target="_blank">Deyby Rodriguez</a> |
             <a href="https://richardbrobbeyasc20.github.io/" target="_blank">Richard Brobbey</a> |
-            <a href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> |
-            <a id='inactive'>Zahvier Walter</a> 
+            <a href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> 
+            <a class='zahvier' id='inactive'>Zahvier Walter</a> 
         </p>
         <p> © 2020 recyclenear.me | Copyright</p>
     </div>
