--- a/howTo.html
+++ b/howTo.html
@@ -63,8 +63,8 @@
         <p>
             <a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> |
             <a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a> |
-            <a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> |
-            <a id='inactive'>Zahvier Walter</a>
+            <a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> 
+            <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
         <p> © 2020 recyclenear.me | Copyright</p>
     </div>
