--- a/recyclingCenters.html
+++ b/recyclingCenters.html
@@ -40,8 +40,8 @@
             <a class=pw href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> |
             <a class=pw href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard
             Brobbey</a> |
-            <a class=pw href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> |
-            <a id='inactive'>Zahvier Walter</a>
+            <a class=pw href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> 
+            <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
         <p> © 2020 recyclenear.me | Copyright</p>
     </div>
