sprinkle on the top

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -61,10 +61,7 @@
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> <br><span>Lead Designer, Front-End Developer</span></h4>
-                <p class="bio"> CFO, CMO of RecycleNear Deybys ass will be mineLorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
-                    similique consequatur
-                    maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
-                    aperiam voluptas? Commodi, molestiae nemo.
+                <p class="bio"> CFO, CMO of RecycleNear Hi, I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York. Currently, I attend Medgar Evers College Preparatory School in Brooklyn and maintain a 3.0 GPA. In the last few years, technology has grown to be a huge interest of mine. This is why after college, I plan on starting my own tech company In Manhattan. One that rivals the big tech companies of today.
                 </p>
 
                 <div class='social-media-container'>
