I work on the footer and the abouts page on the about us page i just tweaked my p tag

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -33,7 +33,7 @@
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a> <br><span>Designer, Front-End Developer, Communications Director</span></h4>
-                <p class="bio">CEO of RecycleNear. The mastermind behind the works of Everything. I decided to be apart of this team because recycling is important to me.
+                <p class="bio">CEO of RecycleNearMe. The mastermind behind the works of Everything. I decided to be apart of this team because recycling is important to me.
                     I believe its the simplest way to preserve our earths resources and help the earth remain a beautiful place. I am currently in the Carl Sagon Engineering and Robotics Department at Forest Hills High School.
                 </p>
 
@@ -60,8 +60,8 @@
         <div class='team-member'>
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> <br><span>Lead Designer, Front-End Developer</span></h4>
-                <p class="bio"> CFO, CMO of RecycleNear Hi, I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York. Currently, I attend Medgar Evers College Preparatory School in Brooklyn and maintain a 3.0 GPA. In the last few years, technology has grown to be a huge interest of mine. This is why after college, I plan on starting my own tech company In Manhattan. One that rivals the big tech companies of today.
+                <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> <br><span>Lead Designer, Front-End Developer, Website Marketing and Financial Director </span></h4>
+                <p class="bio"> I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York. Currently, I attend Medgar Evers College Preparatory School in Brooklyn. I helped create this site because I hope to revolutionize how the everyday person recycles. Most people think recycling and think plastic and paper, but recycling is much more than that, and I aim to open their eyes to that.
                 </p>
 
                 <div class='social-media-container'>
@@ -114,11 +114,8 @@
         <div id='zahvier' class='team-member zahvier'>
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
-                <h4 class=nl>Zahvier Walter</h4>
-                <p class="bio">President of RecycleNear Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro,
-                    similique consequatur
-                    maxime delectus sunt modi natus nihil, libero dolorum dignissimos laboriosam quos quisquam autem
-                    aperiam voluptas? Commodi, molestiae nemo.
+                <h4 class=nl>Zahvier Walter <br><span>UX Designer</span></h4>
+                <p class="bio">I'm Zahvier Walter I'm one of the designers. I hope that this website can be use to make New York City a more environment friendly place.
                 </p>
 
                 <div class='social-media-container'>
@@ -149,7 +146,7 @@
             <a href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> 
             <a class='zahvier' id='inactive'>Zahvier Walter</a> 
         </p>
-        <p> © 2020 recyclenear.me | Copyright</p>
+        <p>Copyright 2020 © RecycleNearMe | All rights reserved</p>
     </div>
 
 </body>
