--- a/news.html
+++ b/news.html
@@ -37,7 +37,7 @@
             <a class=pw href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> 
             <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
-        <p> © 2020 recyclenear.me | Copyright</p>
+        <p>Copyright 2020 © RecycleNearMe | All rights reserved</p>
     </div>
     
 </body>
