--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class=pw href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> 
             <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
-        <p> © 2020 recyclenear.me | Copyright</p>
+        <p>Copyright 2020 © RecycleNearMe | All rights reserved</p>
     </div>
 
 </body>
